--- a/DSA.Extensions.GameTime.asmdef
+++ b/DSA.Extensions.GameTime.asmdef
@@ -1,8 +1,17 @@
 {
     "name": "DSA.Extensions.GameTime",
     "references": [
-        "DSA.Extensions.Base"
+        "DSA.Extensions.Base",
+        "Unity.Entities",
+        "Unity.Entities.Hybrid",
+        "Unity.Transforms",
+        "Unity.Mathematics",
+        "Unity.Jobs",
+        "Unity.Burst",
+        "Unity.Collections"
     ],
+    "optionalUnityReferences": [],
     "includePlatforms": [],
-    "excludePlatforms": []
+    "excludePlatforms": [],
+    "allowUnsafeCode": false
 }
